# openlock

./: .mdlrc  .readthedocs.yaml  LICENSE  README.md  __init__.py  _openlock.py  ignore.txt  install.sh  lint.sh  openlock.py  pyproject.toml  test.py  test.sh  test_openlock.py  util.py
.github/workflows/: tests.yaml  tests_msys.yaml  tests_posix.yaml
docs/: requirements.txt
docs/source/: conf.py  tutorial.rst  usage.rst
